# Hackerson-Aurum-Radar

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  architecture.md  pyproject.toml  requirements.txt  testApi.py
backend/.skills/intelligence-correlation-analysis/: SKILL.md
backend/.skills/intelligence-correlation-analysis/references/: input_schema.json  output_schema.json
backend/.skills/jewelry-intelligence-council/: SKILL.md
backend/.skills/jewelry-intelligence-council/examples/: sample_council_output.json  sample_intelligence.json
backend/.skills/jewelry-intelligence-council/references/: input_schema.json  output_schema.json
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  correlation_agent.py  router.py  session.py
backend/app/api/: routes_actions.py  routes_agents.py  routes_brief.py  routes_dashboard.py  routes_events.py  routes_health.py  routes_jobs.py  routes_skills.py
backend/app/core/: config.py
backend/app/database/: init_db.py  repository.py
backend/app/models/: __init__.py  action_item.py  council_report.py  daily_brief.py  district.py  intelligence_event.py  job_run.py  market_snapshot.py  raw_document.py
backend/app/schemas/: __init__.py  enums.py  pipeline.py
backend/app/services/: __init__.py  pipeline.py  taxonomy.py
backend/app/services/brief/: __init__.py  generator.py
backend/app/services/council/: __init__.py  actions.py  adapter.py  loader.py  orchestrator.py
backend/app/services/evaluation/: __init__.py  checks.py  (+2 more)
backend/scripts/: ingest_crawl_data.py  run_council.py
(+92 files in other folders)
