[project]
name = "aurum-radar-backend"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic-settings==2.6.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "httpx==0.27.2",
    "loguru==0.7.2",
    "oss2==2.19.1",
    "openai==1.55.3",
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "python-dotenv==1.0.1",
    "stevedore>=5.0",
    "jsonschema>=4.0",
]

[project.entry-points."aurum_radar.skills"]
jewelry-intelligence-council = "app.services.skills.plugins.jewelry_intelligence_council:JewelryIntelligenceCouncilSkill"
intelligence-correlation-analysis = "app.services.skills.plugins.intelligence_correlation:IntelligenceCorrelationAnalysisSkill"
